# aiologger

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: main.yaml  pull-request.yaml  release-candidate.yml  release-drafter.yaml  release.yml
aiologger/: filters.py  handlers.py  levels.py  logger.py  protocols.py  records.py  settings.py  utils.py
aiologger/formatters/: base.py  json.py
aiologger/handlers/: base.py  files.py  streams.py
aiologger/loggers/: json.py
docs/: .buildinfo  compatibility.html  conf.py  contributing.html  genindex.html  handlers.html  handlers_files.html  handlers_streams.html  index.html  index.rst  loggers.html  loggers_jsonlogger.html  loggers_logger.html  objects.inv  options.html  py-modindex.html  search.html  searchindex.js  usage.html
docs-src/: Makefile  compatibility.rst  conf.py  handlers.rst  handlers_files.rst  handlers_streams.rst  index.rst  loggers.rst  loggers_jsonlogger.rst  loggers_logger.rst  usage.rst
docs/.doctrees/: compatibility.doctree  contributing.doctree  environment.pickle  handlers.doctree  handlers_files.doctree  handlers_streams.doctree  index.doctree  loggers.doctree  loggers_jsonlogger.doctree  loggers_logger.doctree  options.doctree  usage.doctree
docs/_sources/: compatibility.rst.txt  contributing.rst.txt  index.rst.txt  options.rst.txt
github/: CODEOWNERS
tests/: test_filters.py  test_handlers.py  test_levels.py  test_logger.py  test_records.py  test_uvloop_integration.py  utils.py
tests/formatters/: test_json.py
tests/formatters/json/: test_extended_json_formatter.py  test_json_formatter.py
tests/handlers/: test_files.py  test_streams.py
tests/loggers/: test_json_logger.py
