[metadata]
name = aiologger
version = 0.6.1
description = Asynchronous logging for python and asyncio
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/b2wdigital/aiologger
project_urls =
    Documentation=https://aiologger.readthedocs.io/en/latest/
    Code=https://github.com/b2wdigital/aiologger
    Issue tracker=https://github.com/b2wdigital/aiologger/issues
author = Diogo Magalhães Martins
author_email = magalhaesmartins@icloud.com
keywords = logging json log output
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: System :: Logging

[options]
packages = find:
python_requires = >=3.7
tests_require =
    pytest
    pytest-cov
    codecov
    asynctest==0.12.0
    freezegun==0.3.10
    mypy==0.630
    black==18.9b0
    aiofiles==0.4.0
    uvloop==0.14.0
    orjson==3.4.0
setup_requires = setuptools>=38.6.0

[options.packages.find]
exclude = *test*

[options.extras_require]
aiofiles = aiofiles==0.4.0
